# git-sqlite

./: .gitattributes  .gitconfig  .gitignore  ChangeLog  Makefile.am  configure.ac  sqlite2restore  sqlite3-restore.sh
dists/git-sqlite-0.0.1/test/: Makefile.am
git-sqlite-0.0.2/: AUTHORS  Makefile.am  Makefile.in  README  configure  git-config-sample
git-sqlite-0.0.2/scripts/: Makefile.in
git-sqlite-0.0.2/test/: Makefile.in
git-sqlite-0.0.3/: Makefile.in  configure  gitattributes-sample
git-sqlite-0.0.3/scripts/: sqlite2dump  sqlite3restore
git-sqlite-0.0.3/test/: Makefile.am  test.sqlite2.dump
git-sqlite-0.1.0/: Makefile.in  configure  configure.ac
git-sqlite-0.1.0/scripts/: Makefile.in  sqlite3restore
git-sqlite-0.2.0/: README  configure  configure.ac
git-sqlite-0.2.0/scripts/: sqlite2restore  sqlite3dump  sqlite3restore
git-sqlite-0.2.0/test/: Makefile.in  test.sqlite3.dump  tests.sh
scripts/: Makefile.am  sqlite2dump  sqlite2restore  sqlite3dump  sqlite3restore
src/: Makefile.am  sqlite2-dump.sh  sqlite3-dump.sh
test/: test.sqlite2  test.sqlite2.dump.malformed  test.sqlite3  test.sqlite3.dump.malformed  tests.sh
